Fix issue with scrollbar pushing content off-center

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,14 @@ h1 {
 
 }
 
+.overflow-wrap {
+  overflow-x: hidden;
+}
+
+.x-offset {
+  padding: 0 18px 0 0;
+}
+
 #intro-seciton {
   width: 100vw;
   height: 100vh;
